# PrimeFactorsKata

./: CMakeLists.txt  README.md
src/: greeter.cpp  greeter.h  prime_factors.cpp  prime_factors.h
tests/: CMakeLists.txt  test.cpp
